--- a/index.html
+++ b/index.html
@@ -168,6 +168,33 @@
             </div>
 </section>
 
+<section id="contato">
+
+<div class="titulo">
+    <span>Entre em</span><h2>Contato</h2>
+</div>
+
+<form action="">
+    <div class="campo">
+        <label for="campo-nome">Qual é o seu nome?</label>
+        <input type="text" id="campo nome" placeholder="Digite o seu nome...">
+    </div>
+
+    <div class="campo">
+        <label for="campo-email">Em qual email podemos te responder?</label>
+        <input type="email" id="campo-email" placeholder="Digite seu email..."> 
+    </div>
+    <div class="campo-descricao">
+        <label for="campo-texto">Descreva um pouco da sua empresa,
+            e também o problema que está procurando solucionar.
+        </label>
+        <textarea id="campo-texto"placeholder="Descreva o problema que sua empresa enfrenta..." cols="30" rows="10"></textarea>
+    </div>
+    <button type="submit">Enviar</button>
+
+
+</form>
+</section>
 
 
 
